# mainx

./: .gitignore  README.md  pyproject.toml  smoke_test.py
.github/workflows/: python-tests.yml
config/: Stockprice.yml  weather.yml
examples/: __init__.py  models.py
maix/: __init__.py  client.py  config_parser.py  http_client.py  log_providers.py  manager.py  openapi_bridge.py  queue.py  response_parsing.py  schema.py  secrets.py
maix/specs/: __init__.py  auth.py  endpoint.py  logging.py  retry.py  validation.py
tests/: test_client.py  test_manager.py  test_openapi_bridge.py
tools/: openapi_bridge.py
